--- a/app/src/main/res/layout/activity_inject.xml
+++ b/app/src/main/res/layout/activity_inject.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.dipto.dagger2practice.InjectActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:id="@+id/salary_with_eid_bonus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Salary With Eid Bonus"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textSize="16sp"
+        android:textColor="#000000"/>
+
+</RelativeLayout>
