--- a/app/src/main/res/layout/activity_inject.xml
+++ b/app/src/main/res/layout/activity_inject.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.dipto.dagger2practice.InjectActivity">
 
     <TextView
-        android:id="@+id/salary_with_eid_bonus"
+        android:id="@+id/employee_salary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salary With Eid Bonus"
